tests/negative/semantic/byte_array_literal_out_of_range/input.ci
void main(string[] args) {
    byte[] data = [255, 256];
}
